Basic Structure added

--- a/index.html
+++ b/index.html
@@ -4,8 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
+
+	<header class="header">
+		<ul>
+			<li>1st</li>
+			<hr>
+			<li>2nd</li>
+			<hr>
+			<li>3rd</li>
+			<hr>
+			<li>4th</li>
+			<hr>
+			<li>5th</li>
+		</ul>
+	</header>
+
+	<div class="leftcol">
+		
+	</div>
+
+	<div class="rightcol">
+		
+	</div>
     
 </body>
 </html>
